objects/Investment__c/Investment__c.object-meta.xml
<CustomObject>
    <label>Investment</label>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>