objects/Investment__c/fields/Available_to_Invest__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Invest__c</fullName>
    <label>Available to Invest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>