objects/Investment__c/fields/Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Amount__c</fullName>
    <label>Invested Amount</label>
    <summarizedField>Goods__c.Total_Invested__c</summarizedField>
    <summaryForeignKey>Goods__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>