objects/Investment__c/fields/Total_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned__c</fullName>
    <label>Total Earned</label>
    <summarizedField>Goods__c.Earned_Money__c</summarizedField>
    <summaryForeignKey>Goods__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>