objects/Investment__c/fields/Total_Investmented_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Investmented_Value__c</fullName>
    <formula>Invested_Amount__c +  Total_Earned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investmented Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>